--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "packingthoughts",
+  "name": "passingthoughts",
   "version": "1.0.0",
-  "description": "a site to write passing thoughts and to demostrate skills on using react hooks",
+  "description": "a site to write down your passing thoughts",
   "main": "index.js",
   "dependencies": {
-    "gh-pages": "^3.2.1",
+    "start": "node your-script.js",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
@@ -16,12 +16,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HenryDelGlitch/passingThoughts.git"
+    "url": "a site to write passing thoughts and to demostrate skills on using react hooks"
   },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/HenryDelGlitch/passingThoughts/issues"
-  },
-  "homepage": "https://github.com/HenryDelGlitch/passingThoughts#readme"
+  "license": "ISC"
 }
